--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "scripts": {
         "start": "npm run lint && npm run build && npm run bench && npm test",
         "lint": "tslint src/**/*.ts -p tsconfig.json --project",
-        "test": "tsc ./test/test.ts --sourcemap true && istanbul cover test/test.js && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
+        "pretest": "tsc ./test/test.ts --sourcemap true && rm -rf ./coverage",
+        "test": "istanbul cover test/test.js",
+        "posttest": "npm run report-ts",
+        "remap-istanbul": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
+        "report-ts": "rm -rf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "bench2": "node -v && bash ./scripts/extra-bench.sh",
         "batch-rmc-test": "node scripts/batch-rmc-test",
-        "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 2000 -ol 10 && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
-        "build": "npx gulp rm:nullfile",
+        "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 200 -ol 10 && npm run report-ts",
+        "build": "npx gulp gulp:tsc",
         "dist:nopack": "npx gulp dist",
         "dist": "npx gulp dist:pack",
         "grmc:comp": "tsc -t es2015 -m commonjs --removecomments true src/gulp-rm-cmts.ts"
