--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
 {
     "compilerOptions": {
         "sourceMap": true,
+        /* Source Map Options */
+        // "sourceRoot": "require('path').resolve('./src/ts/') is works?(at script level)", /* Specify the location where debugger should locate TypeScript files instead of source locations. */
+        // "mapRoot": "",                         /* Specify the location where debugger should locate map files instead of generated locations. */
+        // "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
+        // DEVNOTE: 2019-5-14 - for test coverage, fix: remap-istanbul has incomplete detection of source.
+        "inlineSources": true,                    /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
+
         // DEVNOTE: 2019-5-12 - for test (/* istanbul ignore <type> */)
         "removeComments": false,
 
