--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "scripts": {
         "start": "npm run lint && npm run build && npm run bench && npm test",
         "lint": "tslint src/**/*.ts -p tsconfig.json --project",
-        "pretest": "tsc ./test/test.ts --sourcemap true && rm -rf ./coverage",
+        "pretest": "tsc ./test/test.ts --sourcemap true && rimraf ./coverage",
         "test": "istanbul cover test/test.js",
         "posttest": "npm run report-ts",
         "remap-istanbul": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
-        "report-ts": "rm -rf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
+        "report-ts": "rimraf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "bench2": "node -v && bash ./scripts/extra-bench.sh",
         "batch-rmc-test": "node scripts/batch-rmc-test",
@@ -45,10 +45,10 @@
     "author": "jeffy-g",
     "license": "Apache-2.0",
     "devDependencies": {
-        "@types/node": "^12.0.0",
+        "@types/node": "^12.0.2",
         "@types/through2": "^2.0.34",
         "@types/vinyl": "^2.0.3",
-        "codecov": "^3.4.0",
+        "codecov": "^3.5.0",
         "colors": "^1.3.3",
         "del": "^4.1.0",
         "gulp": "^4.0.2",
@@ -59,7 +59,7 @@
         "gulp-typescript": "^5.0.1",
         "istanbul": "^0.4.5",
         "remap-istanbul": "^0.13.0",
-        "terser-webpack-plugin": "^1.2.3",
+        "terser-webpack-plugin": "^1.2.4",
         "ts-loader": "^6.0.0",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
