__[v1.6.4]__ using jest for test, and refactoring
  + 📝 The introduction of jest was very easy.
      an html report is also created by executing "jest --coverage".

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,8 +12,6 @@ pipelines:
           - node
         script: # Modify the commands below to build your repository.
           - yarn install
-          - gulp dist
-          - npm run bench
-          - npm test
+          - yarn start
 
           - bash ./scripts/ci-script.sh
