--- a/package.json
+++ b/package.json
@@ -1,29 +1,48 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.6.3",
+    "version": "1.6.4",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
     "typings": "./bin/index.d.ts",
+    "author": "jeffy-g",
+    "license": "Apache-2.0",
     "scripts": {
-        "start": "npm run lint && npm run build && npm run bench && npm test",
+        "start": "yarn lint && yarn gulp gulp:tsc && yarn bench && yarn test",
         "lint": "tslint src/**/*.ts -p tsconfig.json --project",
-        "pretest": "tsc ./test/test.ts --sourcemap true && rimraf ./coverage",
-        "test": "istanbul cover test/test.js",
-        "posttest": "npm run report-ts",
-        "remap-istanbul": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
-        "report-ts": "rimraf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
+        "test": "jest --coverage",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "bench2": "node -v && bash ./scripts/extra-bench.sh",
         "batch-rmc-test": "node scripts/batch-rmc-test",
-        "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 200 -ol 10 && npm run report-ts",
         "build": "npx gulp gulp:tsc",
         "dist:nopack": "npx gulp dist",
         "dist": "npx gulp dist:pack",
-        "grmc:comp": "tsc -t es2015 -m commonjs --removecomments true src/gulp-rm-cmts.ts"
+        "grmc:comp": "tsc -t es2015 -m commonjs --removecomments true src/gulp-rm-cmts.ts",
+        "v:major": "node ./scripts/version-tool -cmd version -major",
+        "v:minor": "node ./scripts/version-tool -cmd version -minor",
+        "v:patch": "node ./scripts/version-tool -cmd version"
     },
     "//": {
-        "test": "bash -c \"if [ ! -e test/test.js ]; then tsc ./test/test.ts --sourcemap true; fi\""
+        "pretest": "tsc ./test/test.ts --sourcemap true && rimraf ./coverage",
+        "posttest": "npm run report-ts",
+        "test": "bash -c \"if [ ! -e test/test.js ]; then tsc ./test/test.ts --sourcemap true; fi\"",
+        "report-ts": "rimraf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
+        "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 200 -ol 10 && npm run report-ts",
+        "globals": {
+            "ts-jest": {
+                "tsConfig": "test/tsconfig.json"
+            }
+        }
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "testRegex": "test/test\\.ts",
+        "moduleFileExtensions": [
+            "ts",
+            "js"
+        ]
     },
     "repository": {
         "type": "git",
@@ -42,14 +61,12 @@
     "engines": {
         "node": ">=8.4.0"
     },
-    "author": "jeffy-g",
-    "license": "Apache-2.0",
     "devDependencies": {
+        "@types/jest": "^24.0.13",
         "@types/node": "^12.0.2",
         "@types/through2": "^2.0.34",
         "@types/vinyl": "^2.0.3",
         "codecov": "^3.5.0",
-        "colors": "^1.3.3",
         "del": "^4.1.0",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.2.0",
@@ -57,9 +74,10 @@
         "gulp-replace": "^1.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-typescript": "^5.0.1",
-        "istanbul": "^0.4.5",
-        "remap-istanbul": "^0.13.0",
+        "jest": "^24.8.0",
+        "replace": "^1.1.0",
         "terser-webpack-plugin": "^1.2.4",
+        "ts-jest": "^24.0.2",
         "ts-loader": "^6.0.0",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
