--- a/src/ts/gulp/package.json
+++ b/src/ts/gulp/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "description": "remove cstyle comments for gulp",
     "dependencies": {
-        "through2": "*",
-        "rm-cstyle-cmts": "*"
+        "through2": "2.0.5",
+        "rm-cstyle-cmts": "^1.6.5"
     },
     "devDependencies": {},
     "scripts": {
@@ -22,7 +22,8 @@
         "json",
         "text"
     ],
-    "main": "./gulp-rm-cmts.js",
+    "main": "./index.js",
+    "types": "index.d.ts",
     "author": "jeffy-g",
     "license": "Apache-2.0",
     "bugs": {},
