injected batch-rmc-test to wercker pipeline

--- a/wercker.yml
+++ b/wercker.yml
@@ -30,9 +30,16 @@ build:
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
     - script:
-        name: echo nodejs information
+        name: install and standard test
         code: |
           yarn install
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
           npm start
+
+grmc-batch-test:
+  steps:
+    - script:
+      name: gulp-rm-cmts batch test
+      code: |
+        npm run batch-rmc-test
