--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-    "name": "rm-cstyle-cmts",
-    "version": "2.1.0",
-    "description": "remove c style comments from text file(javascript source, json file etc...",
-    "main": "./bin/index.js",
-    "types": "./bin/index.d.ts",
-    "typings": "./bin/index.d.ts",
-    "author": "jeffy-g",
-    "license": "Apache-2.0",
-    "scripts": {
-        "start": "npm run lint && npm run build && npm run bench && npm test",
-        "lint": "tslint src/**/*.ts -p tsconfig.json --project",
-        "test": "jest --coverage",
-        "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
-        "bench2": "node -v && bash ./scripts/extra-bench.sh",
-        "batch-rmc-test": "node scripts/batch-rmc-test",
-        "build": "npx gulp gulp:tsc",
-        "dist:nopack": "npx gulp dist",
-        "dist": "npx gulp dist:pack",
-        "v:major": "node ./scripts/version-tool -cmd version -major",
-        "v:minor": "node ./scripts/version-tool -cmd version -minor",
-        "v:patch": "node ./scripts/version-tool -cmd version"
+  "name": "rm-cstyle-cmts",
+  "version": "2.1.1",
+  "description": "remove c style comments from text file(javascript source, json file etc...",
+  "main": "./bin/index.js",
+  "types": "./bin/index.d.ts",
+  "typings": "./bin/index.d.ts",
+  "author": "jeffy-g",
+  "license": "Apache-2.0",
+  "scripts": {
+    "start": "yarn lint && yarn build && yarn bench && yarn test",
+    "lint": "tslint src/**/*.ts -p tsconfig.json --project",
+    "test": "jest --coverage",
+    "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
+    "bench2": "node -v && bash ./scripts/extra-bench.sh",
+    "batch-rmc-test": "node scripts/batch-rmc-test",
+    "build": "npx gulp gulp:tsc",
+    "webpack": "npx gulp webpack",
+    "dist:nopack": "npx gulp dist",
+    "dist": "npx gulp dist:pack",
+    "v:major": "node ./scripts/version-tool -cmd version -major",
+    "v:minor": "node ./scripts/version-tool -cmd version -minor",
+    "v:patch": "node ./scripts/version-tool -cmd version"
+  },
+  "//": {
+    "pretest": "tsc ./test/test.ts --sourcemap true && rimraf ./coverage",
+    "posttest": "npm run report-ts",
+    "test": "bash -c \"if [ ! -e test/test.js ]; then tsc ./test/test.ts --sourcemap true; fi\"",
+    "report-ts": "rimraf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
+    "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 200 -ol 10 && npm run report-ts",
+    "grmc:comp": "tsc -t es2015 -m commonjs --removecomments true src/ts/gulp/index.ts --outDir bin/"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "./tsconfig.json"
+      }
     },
-    "//": {
-        "pretest": "tsc ./test/test.ts --sourcemap true && rimraf ./coverage",
-        "posttest": "npm run report-ts",
-        "test": "bash -c \"if [ ! -e test/test.js ]; then tsc ./test/test.ts --sourcemap true; fi\"",
-        "report-ts": "rimraf ./coverage/report-ts && remap-istanbul -i coverage/coverage.json -o coverage/report-ts -t html",
-        "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 200 -ol 10 && npm run report-ts",
-        "grmc:comp": "tsc -t es2015 -m commonjs --removecomments true src/ts/gulp/index.ts --outDir bin/"
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
     },
-    "jest": {
-        "globals": {
-            "ts-jest": {
-                "tsConfig": "./tsconfig.json"
-            }
-        },
-        "transform": {
-            "^.+\\.tsx?$": "ts-jest"
-        },
-        "testRegex": "test/test\\.ts",
-        "moduleFileExtensions": [
-            "ts",
-            "js"
-        ]
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/jeffy-g/rm-cstyle-cmts.git"
-    },
-    "keywords": [
-        "remove",
-        "delete",
-        "comment",
-        "comments",
-        "javascript",
-        "strip",
-        "json",
-        "text"
-    ],
-    "engines": {
-        "node": ">=6.0.0"
-    },
-    "devDependencies": {
-        "@types/jest": "^24.0.13",
-        "@types/through2": "^2.0.34",
-        "@types/vinyl": "^2.0.3",
-        "codecov": "^3.5.0",
-        "del": "^4.1.0",
-        "gulp": "^4.0.2",
-        "gulp-cli": "^2.2.0",
-        "gulp-rename": "^1.4.0",
-        "gulp-replace": "^1.0.0",
-        "gulp-sourcemaps": "^2.6.5",
-        "gulp-typescript": "^5.0.1",
-        "jest": "^24.8.0",
-        "replace": "^1.1.0",
-        "terser-webpack-plugin": "^1.3.0",
-        "ts-jest": "^24.0.2",
-        "ts-loader": "^6.0.1",
-        "tslint": "^5.16.0",
-        "typescript": "^3.4.5",
-        "webpack-stream": "^5.1.1"
-    }
+    "testRegex": "test/test\\.ts",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeffy-g/rm-cstyle-cmts.git"
+  },
+  "keywords": [
+    "remove",
+    "delete",
+    "comment",
+    "comments",
+    "javascript",
+    "strip",
+    "json",
+    "text"
+  ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.13",
+    "@types/through2": "^2.0.34",
+    "@types/vinyl": "^2.0.3",
+    "codecov": "^3.5.0",
+    "del": "^4.1.0",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^5.0.1",
+    "jest": "^24.8.0",
+    "replace": "^1.1.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.1",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "webpack-stream": "^5.1.1"
+  }
 }
