--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,18 @@ cache:
 install:
   - yarn install
 
-before_script:
-  - yarn dist
+before_script: |
+  yarn dist
+  curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  chmod +x ./cc-test-reporter
+  ./cc-test-reporter before-build
 
 script:
   - yarn bench
   - yarn test
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 after_success:
   # - bash <(curl -s https://codecov.io/bash)
