--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script:
   - yarn test
 
 after_script:
+  # after-build: combines format-coverage and upload-coverage.
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 after_success:
