--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "rm-cstyle-cmts",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "description": "remove c style comments from text file(javascript source, json file etc...",
   "main": "./bin/index.js",
+  "browser": "./web/index.js",
   "types": "./bin/index.d.ts",
   "typings": "./bin/index.d.ts",
   "author": "jeffy-g",
@@ -66,6 +67,7 @@
     "@types/jest": "^24.0.13",
     "@types/through2": "^2.0.34",
     "@types/vinyl": "^2.0.3",
+    "@types/webpack": "^4.4.32",
     "codecov": "^3.5.0",
     "del": "^4.1.0",
     "gulp": "^4.0.2",
@@ -81,6 +83,7 @@
     "ts-loader": "^6.0.2",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1",
+    "webpack-cli": "^3.3.2",
     "webpack-stream": "^5.1.1"
   }
 }
