--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/vinyl": "^2.0.4",
     "@types/webpack": "^4.41.2",
     "codecov": "^3.6.1",
+    "colors": "^1.4.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
