--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^25.2.1",
     "@types/through2": "^2.0.34",
     "@types/vinyl": "^2.0.4",
-    "@types/webpack": "^4.41.8",
+    "@types/webpack": "^4.41.10",
     "codecov": "^3.6.5",
     "colors": "^1.4.0",
     "del": "^5.1.0",
@@ -77,13 +77,13 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "jest": "^25.2.3",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^25.3.0",
     "replace": "^1.1.5",
     "terser-webpack-plugin": "^2.3.5",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
-    "tslint": "^6.1.0",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1"
   }
