--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/jest": "^25.2.1",
     "@types/through2": "^2.0.34",
     "@types/vinyl": "^2.0.4",
-    "@types/webpack": "^4.41.10",
+    "@types/webpack": "^4.41.11",
     "codecov": "^3.6.5",
     "colors": "^1.4.0",
     "del": "^5.1.0",
@@ -77,7 +77,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-typescript": "^5.0.1",
     "jest": "^25.3.0",
     "replace": "^1.1.5",
     "terser-webpack-plugin": "^2.3.5",
