[renovate] configure schedule

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
     "extends": [
-        "config:base"
+        "config:base", "schedule:daily"
     ],
     "statusCheckVerify": true,
     "ignoreDeps": [
@@ -8,5 +8,9 @@
     ],
     "automerge": true,
     "automergeType": "branch",
-    "rangeStrategy": "bump"
+    "rangeStrategy": "bump",
+    "bumpVersion": "patch",
+    "minor": {
+        "groupName": "all dependencies"
+    }
 }
