--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
         "removeComments": true,
         // "declaration": true,
         // "declarationDir": "./bin",
+        // "allowSyntheticDefaultImports": true,
+        // "esModuleInterop": true,
 
         // statistics
         "diagnostics": true,
