🆙 updated dependent packages

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "update:packages": "yarn upgrade-interactive --latest",
     "test": "jest --coverage",
     "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
-    "batch-rmc-test": "node scripts/batch-rmc-test -progress",
+    "batch-rmc-test": "node scripts/batch-rmc-test -progress -avoid 1675",
     "build": "npx gulp gulp:tsc",
     "webpack": "npx gulp webpack",
     "dist:nopack": "npx gulp dist",
@@ -78,10 +78,10 @@
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
-    "jest": "^26.0.0",
+    "jest": "^26.0.1",
     "replace": "^1.2.0",
     "terser-webpack-plugin": "^3.0.0",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^25.5.0",
     "ts-loader": "^7.0.2",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3",
