--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,10 @@ cache:
   yarn: true
 #  - node_modules
 
-before_install:
-  - npm i -g yarn
+before_install: |
+  VER=$(echo $(x=$(node -v); echo ${x:1:2}))
+  export FIRE_CODECOV=$([ $TRAVIS_OS_NAME = "linux" -a $VER = "14" ] && echo 1 || echo 0)
+  # - npm i -g yarn
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
   # - npm install -g codecov
 
@@ -31,21 +33,26 @@ install:
 
 before_script: |
   yarn dist
-  curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  chmod +x ./cc-test-reporter
-  ./cc-test-reporter before-build
+  if [ $FIRE_CODECOV = "1" ]; then
+    curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    chmod +x ./cc-test-reporter
+    ./cc-test-reporter before-build
+  fi
 
 script:
-  - yarn bench
-  - yarn test
+  - yarn bench && yarn test
 
-after_script:
+after_script: |
   # after-build: combines format-coverage and upload-coverage.
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  if [ $FIRE_CODECOV = "1" ]; then
+    ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  fi
 
-after_success:
+after_success: |
   # - bash <(curl -s https://codecov.io/bash)
-  - codecov -f coverage/coverage-final.json
+  if [ $FIRE_CODECOV = "1" ]; then
+    codecov -f coverage/coverage-final.json
+  fi
 
 before_deploy:
   - bash scripts/ci-script.sh
