--- a/.travis.yml
+++ b/.travis.yml
@@ -22,18 +22,19 @@ cache:
 #  - node_modules
 
 before_install:
-  - npm i -g yarn
+  # - npm i -g yarn
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
   # - npm install -g codecov
 
 install:
   - yarn install
 
-before_script: |
-  yarn dist
-  curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  chmod +x ./cc-test-reporter
-  ./cc-test-reporter before-build
+before_script:
+  - yarn dist
+  if: os = linux
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - chmod +x ./cc-test-reporter
+    - ./cc-test-reporter before-build
 
 script:
   - yarn bench
@@ -41,11 +42,13 @@ script:
 
 after_script:
   # after-build: combines format-coverage and upload-coverage.
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  if: os = linux
+    - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 after_success:
   # - bash <(curl -s https://codecov.io/bash)
-  - codecov -f coverage/coverage-final.json
+  if: os = linux
+    - codecov -f coverage/coverage-final.json
 
 before_deploy:
   - bash scripts/ci-script.sh
