--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 os:
-  - linux
+  # - linux
   - osx
 
 node_js:
@@ -22,7 +22,7 @@ cache:
 #  - node_modules
 
 before_install:
-  # - npm i -g yarn
+  - npm i -g yarn
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
   # - npm install -g codecov
 
@@ -31,10 +31,9 @@ install:
 
 before_script:
   - yarn dist
-  - if: os = linux
-    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    - chmod +x ./cc-test-reporter
-    - ./cc-test-reporter before-build
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - yarn bench
@@ -42,13 +41,11 @@ script:
 
 after_script:
   # after-build: combines format-coverage and upload-coverage.
-  - if: os = linux
-    - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 after_success:
   # - bash <(curl -s https://codecov.io/bash)
-  - if: os = linux
-    - codecov -f coverage/coverage-final.json
+  - codecov -f coverage/coverage-final.json
 
 before_deploy:
   - bash scripts/ci-script.sh
