--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ cache:
   yarn: true
 #  - node_modules
 
-before_install:
-  - npm i -g yarn
+# before_install:
+  # - npm i -g yarn
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
   # - npm install -g codecov
 
@@ -31,21 +31,25 @@ install:
 
 before_script:
   - yarn dist
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
 
-script:
-  - yarn bench
-  - yarn test
+if: os = linux
+  before_script:
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - chmod +x ./cc-test-reporter
+    - ./cc-test-reporter before-build
 
-after_script:
-  # after-build: combines format-coverage and upload-coverage.
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  after_script:
+    # after-build: combines format-coverage and upload-coverage.
+    - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
-after_success:
-  # - bash <(curl -s https://codecov.io/bash)
-  - codecov -f coverage/coverage-final.json
+  after_success:
+    # - bash <(curl -s https://codecov.io/bash)
+    - codecov -f coverage/coverage-final.json
+
+script: |
+  yarn bench
+  yarn test
+
 
 before_deploy:
   - bash scripts/ci-script.sh
