--- a/.travis.yml
+++ b/.travis.yml
@@ -23,36 +23,25 @@ cache:
 
 before_install: |
   VER=$(echo $(x=$(node -v); echo ${x:1:2}))
-  export FIRE_CODECOV=$([ $TRAVIS_OS_NAME = "linux" -a $VER = "14" ] && echo 1 || echo 0)
+  export FIRE_CODECOV=$([ $TRAVIS_OS_NAME = "linux" -a $VER = "14" ] && echo "1" || echo "")
   # - npm i -g yarn
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
-  # - npm install -g codecov
 
 install:
   - yarn install
 
 before_script: |
   yarn dist
-  if [ $FIRE_CODECOV = "1" ]; then
-    curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    chmod +x ./cc-test-reporter
-    ./cc-test-reporter before-build
-  fi
+  bash scripts/travis-ci.sh before_script
 
 script:
   - yarn bench && yarn test
 
 after_script: |
-  # after-build: combines format-coverage and upload-coverage.
-  if [ $FIRE_CODECOV = "1" ]; then
-    ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-  fi
+  bash scripts/travis-ci.sh after_script
 
 after_success: |
-  # - bash <(curl -s https://codecov.io/bash)
-  if [ $FIRE_CODECOV = "1" ]; then
-    codecov -f coverage/coverage-final.json
-  fi
+  bash scripts/travis-ci.sh after_success
 
 before_deploy:
   - bash scripts/ci-script.sh
