--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "jest": {
     "globals": {
       "ts-jest": {
-        "tsConfig": "./tsconfig.json"
+        "tsconfig": "./tsconfig.json"
       }
     },
     "transform": {
@@ -65,26 +65,26 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^27.4.0",
     "@types/through2": "^2.0.36",
     "@types/vinyl": "^2.0.4",
-    "@types/webpack": "^4.41.17",
+    "@types/webpack": "^5.28.0",
     "codecov": "^3.7.0",
     "colors": "^1.4.0",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "jest": "^26.0.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^27.4.7",
     "replace": "^1.2.0",
-    "terser-webpack-plugin": "^3.0.2",
-    "ts-jest": "^26.1.0",
-    "ts-loader": "^7.0.5",
+    "terser-webpack-plugin": "^5.3.0",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.3",
-    "webpack": "^4.43.0"
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0"
   }
 }
