--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "copy:types": "yarn fire:tool copytypes",
     "dist": "rimraf \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && yarn org-pkg -o ./dist",
     "fire:tool": "bash scripts/tool.sh",
-    "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops",
+    "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure",
     "ic": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint src/**/*.ts",
     "jstool": "node ./scripts/tiny/tools",
