refactoring npm script `test` #1

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "org-pkg": "orgpkg -p -k \"jest,defs\"",
     "patch:tag": "yarn fire:tool patch_with_tag",
     "preserve:jsdoc": "yarn jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
-    "test": "rimraf ./coverage/* && jest --coverage --silent=false -c=jest.config.js --testRegex=/__tests__/*",
+    "pretest": "rimraf ./coverage/*",
+    "test": "bash -c \"[ -z $JEST_CONF ] && JEST_CONF=jset.config.js; jest --silent=true -c=$JEST_CONF\"",
     "toggle:cmts": "yarn jstool -cmd cmtTrick -targets \"js-scanner.ts,\" -basePath src",
     "ts:check": "tsc --noemit",
     "up": "yarn upgrade-interactive --latest",
