♻️ refactoring test - gulp plugin test is work fine

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "copy:types": "yarn fire:tool copytypes",
     "dist": "rimraf \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && yarn org-pkg -o ./dist",
     "fire:tool": "bash scripts/tool.sh",
-    "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure",
+    "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure -collectJSDocTag",
     "ic": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint src/**/*.ts",
     "jstool": "node ./scripts/tiny/tools",
@@ -62,7 +62,7 @@
     "patch:tag": "yarn fire:tool patch_with_tag",
     "preserve:jsdoc": "yarn jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
     "pretest": "rimraf ./coverage/*",
-    "test": "bash -c \"[ -z $JEST_CONF ] && JEST_CONF=jset.config.js; jest --silent=true -c=$JEST_CONF\"",
+    "test": "bash -c \"[ -z $JEST_CONF ] && JEST_CONF=jest.config.js; jest --silent=false -c=$JEST_CONF\"",
     "toggle:cmts": "yarn jstool -cmd cmtTrick -targets \"js-scanner.ts,\" -basePath src",
     "ts:check": "tsc --noemit",
     "up": "yarn upgrade-interactive --latest",
@@ -71,7 +71,9 @@
   },
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.2",
+    "@types/gulp": "^4.0.9",
     "@types/jest": "^27.4.1",
+    "@types/rimraf": "^3.0.2",
     "@types/through2": "^2.0.36",
     "@types/vinyl": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
