--- a/package.json
+++ b/package.json
@@ -52,13 +52,12 @@
     "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
     "copy:files": "yarn fire:tool copyfiles",
     "copy:types": "yarn fire:tool copytypes",
-    "dist": "rimraf \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && yarn org-pkg -o ./dist",
+    "dist": "rimraf \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && orgpkg -p -k defs",
     "fire:tool": "bash scripts/tool.sh",
     "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure -collectJSDocTag",
     "ic": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint src/**/*.ts",
     "jstool": "node ./scripts/tiny/tools",
-    "org-pkg": "orgpkg -p -k \"jest,defs\"",
     "patch:tag": "yarn fire:tool patch_with_tag",
     "preserve:jsdoc": "yarn jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
     "pretest": "rimraf ./coverage/*",
