♻️ tsconfig.json - suppress "use strict" directive, use "noUncheckedIndexedAccess" ♻️ src/gulp/index.ts - types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "skipDefaultLibCheck": true,
 
     "strict": true,
+    "alwaysStrict": false,
+    "noImplicitUseStrict": true,
+    "noUncheckedIndexedAccess": true,
     "removeComments": false,
 
     "moduleResolution": "node",
